listings/ch13-functional-features/listing-13-08/output.txt
$ cargo run
   Compiling rectangles v0.1.0 (file:///projects/rectangles)
error[E0507]: cannot move out of `value`, a captured variable in an `FnMut` closure
(エラー: `FnMut`クロージャ内にキャプチャされた変数`value`からムーブすることはできません)
  --> src/main.rs:18:30
   |
15 |     let value = String::from("by key called");
   |         ----- captured outer variable
   |              (キャプチャされる外側の変数)
16 |
17 |     list.sort_by_key(|r| {
   |                      --- captured by this `FnMut` closure
   |                         (この`FnMut`クロージャによってキャプチャされています)
18 |         sort_operations.push(value);
   |                              ^^^^^ move occurs because `value` has type `String`, which does not implement the `Copy` trait
   |                                   (`value`は型`String`を持ち、`Copy`トレイトを実装しないので、ムーブが発生します)

For more information about this error, try `rustc --explain E0507`.
error: could not compile `rectangles` (bin "rectangles") due to 1 previous error
